manifests/base/argocd/overlays/prd/scrapers.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-metrics
  annotations:
    prometheus.io/port: "8082"
    prometheus.io/scrape: "true"
