manifests/base/argocd/overlays/prd/patches.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
---
apiVersion:  apps/v1
kind: StatefulSet
metadata:
  name: argocd-application-controller
spec:
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
spec:
  rules:
  - host: <ARGOCD_HOST_PRD>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
---
